--- a/index.html
+++ b/index.html
@@ -6,26 +6,19 @@
     <title>Namaste React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">Not Rendered</div>
     <link rel="stylesheet" href="./index.css">
+
+    
     <!-- ===added React cdn link === -->
-    <script
+    <!-- <script
       crossorigin
       src="https://unpkg.com/react@18/umd/react.development.js"
     ></script>
     <script
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
-    <script src="./App.js"></script>
-
-    <!-- ====html create using dom (javascript)====== -->
-    <!-- <script>
-        const heading=document.createElement('h1')
-        heading.innerHTML='hello world from javaScreipt'
-
-        const root=document.getElementById("root")
-        root.appendChild(heading)
-    </script> -->
+    ></script> -->
+    <script type="module" src="./App.js" ></script>
   </body>
 </html>
